--- a/src/styles/supplement.css
+++ b/src/styles/supplement.css
@@ -1,6 +1,6 @@
 .cabralimg {
   height: 50vh;
-  background-image: url('../images/cabral.webp');
+  background-image: url('../images/cabdet.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
