--- a/src/styles/supplement.css
+++ b/src/styles/supplement.css
@@ -6,9 +6,14 @@
 }
 
 .supcard {
-  margin: 0px 10px 30px 10px;
+  margin: 10px 10px 30px 10px;
   opacity: 1;
   cursor: pointer;
+}
+
+.sup-book-apt {
+  text-align: center;
+  margin-bottom: 15px;
 }
 
 .book-apt {
