--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,8 @@
 .first-section-home {
   padding-bottom: 20px;
   height: auto;
-  min-height: 80vh;
-  margin-top: 20px;
+  min-height: 70vh;
+/*   margin-top: 20px; */
   background-image: url('../images/lena.jpg');
   background-repeat: no-repeat;
   background-size: 70%;
@@ -14,7 +14,7 @@
     padding-bottom: 10px;
     height: auto;
     min-height: 35vh;
-    margin-top: 20px;
+/*     margin-top: 20px; */
     background-image: url('../images/lena.jpg');
     background-repeat: no-repeat;
     background-size: 90%;
