--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -70,6 +70,7 @@
   background-color: white !important;
   cursor: pointer;
   box-shadow: 1px 1px 1px 0px #3871d38f;
+  color: black;
 }
 
 .let-connect {
